# exe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: build.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: effects.rs  engine.rs  export.rs  keyboard.rs  media.rs  mod.rs  preview.rs  project.rs  timeline.rs  undo.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/utils/: mod.rs
src/scripts/core/: app.js  events.js  ipc.js
src/scripts/media/: browser.js
src/scripts/preview/: preview.js
src/scripts/timeline/: clip.js  timeline.js  track.js
src/scripts/ui/: dialogs.js  menus.js  properties.js
src/styles/: components.css  main.css  media-browser.css  preview.css  properties.css  timeline.css  toolbar.css
